# settlekit

./: .dockerignore  .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.next  LEPTON.md  LEPTON_PRODUCTION_PLAN.md  Makefile  PRODUCTION.md  README.md  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.workflows/: build-apps.mjs  build-distribution.mjs  build-fullproduct-r1.mjs  build-fullproduct-r2.mjs  build-fullproduct-r3.mjs  build-packages.mjs  build-pg-wiring.mjs  build-polyglot.mjs  build-product.mjs
apps/admin/: README.md  next.config.mjs  package.json  tsconfig.json  vercel.json
apps/agent-console/: README.md  next.config.mjs  package.json  vercel.json
apps/api/: Dockerfile  README.md  package.json  tsconfig.json
apps/arc-commerce/: next.config.ts  package.json  vercel.json
apps/arc-escrow/: next.config.js  package.json  vercel.json
apps/arc-fintech/: next.config.ts  package.json  vercel.json
apps/arc-multichain-wallet/: package.json  vercel.json
apps/arc-nanopayments/: agent.mts  next.config.ts  package.json  vercel.json
apps/arc-p2p-payments/: next.config.js  package.json  vercel.json
apps/arc-prediction-markets/: .gitignore  README.md  hardhat.config.ts  next.config.ts  package.json  vercel.json
apps/arc-stablecoin-fx/: next.config.ts  package.json  vercel.json
apps/checkout/: .gitignore  README.md  next.config.mjs  package.json  tsconfig.json  vercel.json
apps/circle-bridge-kit-transfer/: index.html  package.json  vercel.json
apps/circle-cctp-crosschain-transfer/: next.config.ts  package.json  vercel.json
apps/circle-cctp-fulfiller-repayment/: package.json
apps/cli/: README.md  package.json  tsconfig.json
apps/creator-dashboard/: README.md  next.config.mjs  package.json  vercel.json
apps/dashboard/: README.md  middleware.ts  package.json  vercel.json
apps/docs/: README.md  next.config.mjs  package.json  tsconfig.json  vercel.json
apps/examples/: README.md  package.json  tsconfig.json
apps/marketplace/: README.md  next.config.mjs  package.json  vercel.json
apps/portal/: README.md  next.config.mjs  package.json  vercel.json
apps/stream-meter/: README.md  next.config.mjs  package.json  vercel.json
apps/web/: README.md  next.config.mjs  package.json  vercel.json
apps/worker/: Dockerfile  README.md  package.json  tsconfig.json
clis/agentpay/: README.md  go.mod  main.go
clis/lepton/: README.md  package.json  tsconfig.json
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol  DeployLepton.s.sol
contracts/src/: AgentReputationBond.sol  LeptonStreamSettlement.sol  RecursiveSplitDistributor.sol  SettleKitCctpHook.sol  SettleKitEscrow.sol
contracts/test/: AgentReputationBond.t.sol  Helpers.sol  LeptonStreamSettlement.t.sol  RecursiveSplitDistributor.t.sol  SettleKitCctpHook.t.sol  SettleKitEscrow.t.sol
docs/: API.md  ARC_CIRCLE_NEXT_PHASE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  LEPTON_REMAINING.md  QUICKSTART.md  SUITE.md  SettleKit_Circle_Arc_Pitch_Deck.pptx  WEBHOOKS.md
examples/express-paid-api/: README.md  package.json  tsconfig.json
examples/go-paid-client/: README.md  go.mod  main.go
examples/nextjs-saas-starter/: .env.example  README.md  next.config.mjs  package.json  tsconfig.json
examples/python-saas/: README.md  pyproject.toml  requirements.txt
examples/python-saas/app/: __init__.py  deps.py  main.py  settlekit_client.py
examples/rust-license-check/: Cargo.toml  README.md
examples/rust-license-check/src/: main.rs
examples/subscription-lifecycle/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: start.mjs
sdks/go/: README.md  agentservices.go  analytics.go  apikeys.go  auth.go  checkout.go  client.go  coupons.go  disputes.go  dunning.go  entitlements.go  errors.go  go.mod  invoices.go  licensekeys.go  marketplace.go  payments.go  payouts.go  products.go  settings.go  subscriptions.go  types.go  types_extra.go  usage.go  webhooks.go
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: paid_api.py
sdks/python/settlekit/: __init__.py  _transport.py  client.py  errors.py  verify.py  x402.py
sdks/python/settlekit/resources/: __init__.py  _base.py  agent_services.py  analytics.py  api_keys.py  checkout.py  coupons.py  customers.py  disputes.py  dunning.py  entitlements.py  invoices.py  license_keys.py  marketplace.py  payments.py  payouts.py  prices.py  products.py  refunds.py  settings.py  subscriptions.py  usage.py  webhooks.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  error.rs  lib.rs  types.rs
sdks/rust/src/resources/: analytics.rs  api_keys.rs  auth.rs  checkout.rs  coupons.rs  disputes.rs  dunning.rs  entitlements.rs  invoices.rs  license_keys.rs  marketplace.rs  mod.rs  payments.rs  payouts.rs  products.rs  refunds.rs  settings.rs  subscriptions.rs  usage.rs  webhooks.rs
services/arc-indexer/: Cargo.toml  README.md
services/arc-indexer/src/: config.rs  error.rs  main.rs  rpc.rs  settlekit.rs  usdc.rs
services/license-gateway/: Cargo.toml  README.md
services/license-gateway/src/: cache.rs  client.rs  config.rs  error.rs  main.rs  routes.rs
services/webhook-relay/: Cargo.toml  README.md
services/webhook-relay/src/: config.rs  error.rs  main.rs  relay.rs  routes.rs  signer.rs  subscribers.rs
services/x402-gateway/: README.md  config.go  gateway.go  go.mod  main.go  payment.go  requirements.go  (+1 more)
(+739 files in other folders)
