[package]
name = "license-check"
version = "0.1.0"
edition = "2021"
description = "SettleKit license / API key / entitlement verification CLI example."
license = "MIT"

[[bin]]
name = "license-check"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
