[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "settlekit"
version = "0.1.0"
description = "Official Python SDK for SettleKit — crypto-native commerce, entitlements, license keys, and x402 paid APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SettleKit" }]
keywords = ["settlekit", "payments", "x402", "usdc", "stablecoin", "commerce", "entitlements"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110", "starlette>=0.36"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "fastapi>=0.110",
  "starlette>=0.36",
]

[project.urls]
Homepage = "https://settlekit.dev"
Documentation = "https://settlekit.dev/docs"
Source = "https://github.com/settlekit/settlekit"

[tool.hatch.build.targets.wheel]
packages = ["settlekit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
