[package]
name = "settlekit"
version = "0.1.0"
edition = "2021"
description = "Official async Rust SDK for the SettleKit commerce API."
license = "MIT"
repository = "https://github.com/settlekit/settlekit"
readme = "README.md"
keywords = ["settlekit", "payments", "commerce", "api", "sdk"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["default-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

[features]
# `examples` pulls in a Tokio runtime so the README example can be run as-is.
examples = ["dep:tokio"]
