[package]
name = "settlekit-arc-indexer"
edition = "2021"
version = "0.1.0"
description = "Watches an Arc/EVM RPC for USDC ERC-20 Transfer events to a payout address and confirms payments against the SettleKit API."
license = "MIT"

[[bin]]
name = "arc-indexer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
