[package]
name = "license-gateway"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust verification gateway fronting the SettleKit API with an in-memory TTL cache."
license = "MIT"
authors = ["SettleKit"]

[[bin]]
name = "license-gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dashmap = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
