[package]
name = "webhook-relay"
edition = "2021"
version = "0.1.0"
description = "Receives SettleKit webhook events and fans them out to subscriber URLs with HMAC signing, retry/backoff, and an in-memory delivery log."
license = "MIT"

[[bin]]
name = "webhook-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
